# sql_performance_explained

./: README.md  pyproject.toml
sql_performance_explained/: example1.py  example2.py  index.py  index_like_query_perf.py  order_of_index_columns.py  partial_index.py
