[tool.poetry]
name = "sql-performance-explained"
version = "0.1.0"
description = ""
authors = ["Engin Guller <enginguller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlite3 = "^3.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
